--- a/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/backend.yaml
+++ b/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/backend.yaml
@@ -2,6 +2,14 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-app
+  annotations:
+    "sidecar.jaegertracing.io/inject": "true"
+    prometheus.io/scrape: "true"
+    prometheus.io/path: /metrics
+    prometheus.io/port: backendport
+  labels:
+    name: backend
+    release: prometheus 
 spec:
   replicas: 3
   selector:
@@ -13,10 +21,15 @@ spec:
         app: backend
     spec:
       containers:
-      - name: backend
-        image: ghcr.io/thejaysmith/backend:v1
+      - env:
+        - name: JAEGER_HOST
+          value: my-traces-agent.observability.svc.cluster.local
+        name: backend
+        image: abdlquadri/backend-project-3:v1.1.0
         ports:
-        - containerPort: 8081
+        - name: backendport
+          containerPort: 8080
+          protocol: TCP
 ---
 apiVersion: v1
 kind: Service
@@ -27,5 +40,30 @@ spec:
     app: backend
   ports:
     - port: 8081
-      targetPort: 8080
+      targetPort: backendport
   type: LoadBalancer
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: backend
+  annotations:
+    "sidecar.jaegertracing.io/inject": "true"
+    prometheus.io/scrape: "true"
+    prometheus.io/path: /metrics
+    prometheus.io/port: backendport
+  namespace: monitoring
+  labels:
+    app: backend
+    release: prometheus
+spec:
+  selector:
+    matchLabels:
+      app: backend
+  endpoints:
+  - port: backend
+    path: /metrics
+    interval: 15s
+  namespaceSelector:
+    matchNames:
+    - default
